# Viewer3D

./: .gitignore  CMakeLists.txt  GLTime.h  GLtime.cpp  Viewer3D_el_GR.ts  main.cpp  mainwindow.cpp  mainwindow.h  mesh.cpp  mesh.h  scene3d.cpp  scene3d.h  shaderprogram.cpp  shaderprogram.h
cmake/: FindGLM.cmake
lib/: assimp.lib
resources/shaders/: default.frag  default.vert
shaders/: default.frag  default.vert
src/: main.cpp  scene3d.cpp
